overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-demo-app  # Ensure it matches the base deployment
spec:
  replicas: 1  # Fewer replicas for dev environment
  template:
    spec:
      containers:
      - name: gitops-demo-container  # Matches the base container name
        image: jed.ocir.io/ax50lljnvoms/gitops-demo:v0.1.0  # Dev-specific image
